Various CSS fixed to remove background image "bleed" and increase text contrast

--- a/public/stylesheets/reports.css
+++ b/public/stylesheets/reports.css
@@ -152,5 +152,8 @@
   height: auto;
   background-color: white;
   border: 1px solid #89b4b7;
-  margin: 2px;
+  margin: 10px 2px;
   padding: 2px; }
+
+.accordion_container {
+  margin: 10px 2px; }
